Fix Save for later button RTL bookmark alignment.

--- a/www/less/footerReadMore.less
+++ b/www/less/footerReadMore.less
@@ -53,7 +53,16 @@ a.footer_readmore_page_action_save {
   color: #2C5BC5;
   font-weight: bold;
   padding-left: 24px;
+  padding-right: 24px;
   background-size: 12px 18px;
   background-repeat: no-repeat;
+/*  background-position: left center; */
+}
+
+html[dir="rtl"] a.footer_readmore_page_action_save {
+  background-position: right center;
+}
+
+html[dir="ltr"] a.footer_readmore_page_action_save {
   background-position: left center;
 }
